# smartnoise-sdk

./: .gitignore  CNAME  README.md  azure-pipelines.yml  contributing.rst  genindex.html  index.html  objects.inv  requirements.txt  search.html
eval/: HISTORY.md  README.md  pyproject.toml  setup.py
eval/docs/: Makefile  README.md
eval/docs/source/: conf.py  index.rst  quickstart.rst
eval/sneval/: README.md  __init__.py  _aggregation.py  _dp_verification.py  _exploration.py  analyze.py  dataset.py  evaluate.py  metrics.py
eval/sneval/benchmarking/: _dp_benchmark.py
eval/sneval/evaluator/: _base.py
eval/sneval/learner/: _dp_env.py  bandit.py  util.py
eval/sneval/metrics/: __init__.py  _metrics.py  base.py
eval/sneval/params/: _halton_params.py  _learner_params.py
eval/tests/: conftest.py  dp_algorithm.py  dp_lib.py  dp_singleton_query.py  requirements.txt  test_bandit.py  test_dataset.py  test_sql.py
eval/tests/compare/: test_mean_abs_error_in_count.py  test_mean_prop_error_in_count.py
eval/tests/single/: test_mean.py  test_median.py
evaluator/: README.md  pyproject.toml  setup.py
evaluator/sneval/: _aggregation.py  _dp_verification.py  _exploration.py
evaluator/sneval/benchmarking/: _base.py
evaluator/sneval/evaluator/: _base.py  _dp_evaluator.py
evaluator/sneval/explorer/: _base.py
evaluator/sneval/learner/: _base.py  _computeactions.py  _dp_env.py  _transformation.py  dp_singleton_query.py  dprl.md  q_learning.py
evaluator/sneval/metrics/: _benchmark_metrics.py
evaluator/sneval/params/: _benchmark_params.py  _eval_params.py
evaluator/sneval/privacyalgorithm/: _base.py
evaluator/tests/: dp_multikey.py  dp_singleton_query.py  test_interface.py  test_rl.py  test_sql.py  test_stochastic.py
sql/: .buildinfo  .secrets-demo  DESCRIPTION.md  HISTORY.md  Makefile  Metadata.md  README.md  VERSION  advanced.html  genindex.html  index.html  metadata.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
sql/.doctrees/: advanced.doctree  environment.pickle  index.doctree  metadata.doctree
sql/.doctrees/api/: index.doctree
sql/_modules/: index.html
sql/_sources/: metadata.rst.txt
sql/_sources/api/: index.rst.txt
sql/api/: index.html
sql/docs/: Makefile  README.md
sql/docs/source/: advanced.rst  conf.py  index.rst  metadata.rst
sql/samples/: Policy Laplace on Spark.ipynb  SQL Queries.ipynb  Synopsis.ipynb  policy_laplace.py  requirements.txt  requires.txt
sql/samples/whitepaper-demos/: 2-reidentification-attack.ipynb  3-histogram-sample.ipynb  requirements.txt
sql/snsql/: __init__.py  connect.py  metadata.py  report.py
sql/snsql/_ast/: ast.py  expression.py  tokens.py  validate.py
sql/snsql/metadata/: __init__.py  collection.py
sql/snsql/reader/: __init__.py  base.py
sql/snsql/sql/: __init__.py  dpsu.py  odometer.py  parse.py  privacy.py  private_reader.py  private_rewriter.py
sql/snsql/xpath/: ast.py  parse.py
sql/tests/: README.md  conftest.py  pytest.ini  requirements.txt  test_local_analyst.py  test_rewriting.py
sql/tests/accuracy/: test_accuracy.py  test_mech_accuracy.py  test_simple_accuracy.py
sql/tests/ast/: test_ast_from_meta.py  test_count_compare.py  test_database_types.py  test_datetime.py  test_load_metadata.py  test_load_symbols.py  test_logical.py  test_numeric.py  test_string.py  test_visualize.py
sql/tests/engines/: README.md  test_base_engines.py  test_db_count.py  test_pandas_dict.py  test_postgres_identifiers.py  test_sqlserver_identifiers.py
sql/tests/mechanism/: test_approx_bounds.py
sql/tests/metadata/: test_bounds_check.py  test_datasource_literal.py  test_load_from.py  test_tablename_match.py
sql/tests/odometer/: test_odometer.py
sql/tests/private_reader/: test_pre_aggregated.py  test_private_reader.py
sql/tests/query/: test_ast.py  test_fq_object_name.py  test_grouping_clamp.py  test_having.py  test_having_expressions.py  test_i32_overflow.py  test_opt_rewrite.py  test_order_by.py  test_order_by_expressions.py  test_query.py  test_query_error.py  test_rewriter.py  test_thresholds.py  test_top.py  test_types.py  test_validate.py  test_validate_pums.py
sql/tests/reader/: test_reader_base.py
sql/tests/rewriter/: test_count_allcounts.py
sql/tests/setup/: dataloader.py  download.py
sql/tests/xpath/: test_xpath.py
synth/: .buildinfo  .gitignore  HISTORY.md  Makefile  README.md  VERSION  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
synth/.doctrees/: environment.pickle  index.doctree
synth/.doctrees/api/: index.doctree
synth/.doctrees/synthesizers/: aim.doctree  dpctgan.doctree  dpgan.doctree  index.doctree  mst.doctree  mwem.doctree  pac_synth.doctree  patectgan.doctree  pategan.doctree  quail.doctree
synth/_modules/: index.html
synth/_sources/: index.rst.txt
synth/api/: index.html
synth/docs/: .gitignore  Makefile  README.md
synth/docs/source/: conf.py  (+1 more)
synth/samples/: MWEM.ipynb  requirements.txt  utils.py
synth/smartnoise-synth-1.0.4/: setup.py
synth/snsynth/: __init__.py  base.py  definitions.py  mwem.py  quail.py  utils.py
synth/synthesizers/: aim.html  dpctgan.html  dpgan.html  index.html  mst.html  mwem.html  pac_synth.html  patectgan.html  pategan.html  quail.html
synth/tests/: conftest.py  dpctgan_tests.ipynb  pytest.ini  requirements.txt  test-domain.json  test_aggregate_seeded.py  test_aim.py  test_factory.py  test_gsd.py  test_input_checks.py  test_mst.py  test_mwem.py  test_pategan.py  test_privacy.py  test_pytorch_synthesizer.py  test_quail.py  test_sample_conditional.py  test_transformers.py
synth/transforms/: index.html
(+1092 files in other folders)
