[tool.poetry]
name = "smartnoise-eval"
version = "0.3.0"
description = "Evaluation of differentially private tabular data"
authors = ["SmartNoise Team <smartnoise@opendp.org>"]
license = "MIT"
packages = [{include="sneval"}]
homepage = "https://smartnoise.org"
repository = "https://github.com/opendp/smartnoise-sdk"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyspark = "^3.5.0"
numpy = "^1.26.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
