[tool.poetry]
name = "smartnoise-eval"
version = "0.2.0"
description = "Differential Privacy Stochastic Evaluator"
authors = ["SmartNoise Team <smartnoise@opendp.org>"]
license = "MIT"
packages = [{include="sneval"}]
homepage = "https://smartnoise.org"
repository = "https://github.com/opendp/smartnoise-sdk"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<=3.9"
opendp = "^0.3.0"
smartnoise-sql = "^0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
