[tool.poetry]
name = "smartnoise-sql"
version = "0.2.2"
description = "Differentially Private SQL Queries"
authors = ["SmartNoise Team <smartnoise@opendp.org>"]
license = "MIT"
packages = [{include="snsql"}]
homepage = "https://smartnoise.org"
repository = "https://github.com/opendp/smartnoise-sdk"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.6,<3.11"
opendp = "^0.3.0"
antlr4-python3-runtime = "4.8"
pandasql = "^0.7.3"
PyYAML = "^5.4.1"
graphviz = "^0.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
