[tool.poetry]
name = "smartnoise-sql"
version = "1.0.1"
description = "Differentially Private SQL Queries"
authors = ["SmartNoise Team <smartnoise@opendp.org>"]
license = "MIT"
packages = [{include="snsql"}]
homepage = "https://smartnoise.org"
repository = "https://github.com/opendp/smartnoise-sdk"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
opendp = "^0.7.0"
antlr4-python3-runtime = "4.9.3"
PyYAML = "^6.0.1"
graphviz = "^0.17"
sqlalchemy = "^2.0.0"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
