[tool.poetry]
name = "smartnoise-synth"
version = "1.0.4"
description = "Differentially Private Synthetic Data"
authors = ["SmartNoise Team <smartnoise@opendp.org>"]
license = "MIT"
packages = [{include="snsynth"}]
homepage = "https://smartnoise.org"
repository = "https://github.com/opendp/smartnoise-sdk"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
opacus = "^0.14.0"
torch = {version = "<2.0.0", optional = true, markers = "extra != 'notorch'"}
pac-synth = "^0.0.8"
smartnoise-sql = "^1.0.4"
Faker = ">=17.0.0"

[tool.poetry.extras]
notorch = []

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
