[tool.poetry]
name = "smartnoise-synth"
version = "1.0.4"
description = "Differentially Private Synthetic Data"
authors = ["SmartNoise Team <smartnoise@opendp.org>"]
license = "MIT"
packages = [{include="snsynth"}]
homepage = "https://smartnoise.org"
repository = "https://github.com/opendp/smartnoise-sdk"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
opacus = "^0.14.0"
torch = {version = ">=2.2.0", optional = true}
pac-synth = "^0.0.8"
smartnoise-sql = "^1.0.4"
Faker = ">=17.0.0"
private-pgm = { git = "https://github.com/ryan112358/private-pgm.git", rev = "01f02f17eba440f4e76c1d06fa5ee9eed0bd2bca" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
